--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Kaushaledra Pandey</title>
 </head>
 <body>
-    This is my portfolio
+    <h1>This is my portfolio.</h1>
 </body>
 </html>
