feat: added scroll to target feature

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <div class="topnav" id="myTopnav">
       <a href="#home"> Kaushalendra Pandey </a>
-      <a href="#news">Projects</a>
+      <a href="javascript:void(0);" onclick="scrollToProjects()">Projects</a>
       <a href="blog.html">Blogs</a>
-      <a href="#about">Contact</a>
+      <a href="javascript:void(0);" onclick="scrollToFooter()">Contact</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
@@ -43,7 +43,7 @@
         <div class="card">
             <h2>CLI-QUIZ</h2>
             <p class="desc">
-              Wanna chech how well you know me ? Check out my CLI quiz app here!
+              Wanna check how well you know me ? Check out my CLI quiz app here!
             </p>
             <!-- <h3 style="color: blue; text-align: center;"> Github Repo</h3> -->
             <div class="take-me-button">
