--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="main">
+        <a href="index.html"> <h3> Home </h3> </a>
         <h1 style="text-align: center;"> My published Blogs : </h1>
     </div>
 
