feat: added a new blog

--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,15 @@
                 or telling a user th..<span><a href="https://itskaush.hashnode.dev/sweetalerts-beautiful-alerts"> Read More.. </a></a></span>
             </p>
         </div>
+
+        <div class="card">
+            <h2> Doing things without React!  </h2>
+            <p class="desc">
+                Everyone who has been working with REACT has come across
+                a situation where he needs to render the same component
+                for so many items... <span><a href="https://itskaush.hashnode.dev/doing-things-without-react"> Read More..</a></span>
+            </p>
+        </div>
     </div>
     
 </body>
