feat: added new blog

--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,15 @@
                 for so many items... <span><a href="https://itskaush.hashnode.dev/doing-things-without-react"> Read More..</a></span>
             </p>
         </div>
+
+        <div class="card">
+            <h2> Constructors in CPP  </h2>
+            <p class="desc">
+                Object-Oriented Programming is a paradigm 
+                of programming which is based on the concepts
+                 of "Objects". It is a style of p...<span><a href="https://itskaush.hashnode.dev/constructors-in-c"> Read More.. </a></a></span>
+            </p>
+        </div>
     </div>
     
 </body>
