feat: added seperate store for blogs

--- a/blog.html
+++ b/blog.html
@@ -15,42 +15,9 @@
     </div>
 
     <div class="card-container">
-        <div class="card">
-            <h2> NEXT.JS  </h2>
-            <p class="desc">
-                Next.js is a framework build over react.js which, 
-                as they claim, is laden up with all the features 
-                needed for production. If you are<span><a href="https://itskaush.hashnode.dev/nextjs-what-and-why"> Read More.. </a></a></span>
-            </p>
-        </div>
-
-        <div class="card">
-            <h2> Sweetalerts  </h2>
-            <p class="desc">
-                Alerts have been a major part of a developer's
-                life. Be it from testing code flow in the development
-                or telling a user th..<span><a href="https://itskaush.hashnode.dev/sweetalerts-beautiful-alerts"> Read More.. </a></a></span>
-            </p>
-        </div>
-
-        <div class="card">
-            <h2> Doing things without React!  </h2>
-            <p class="desc">
-                Everyone who has been working with REACT has come across
-                a situation where he needs to render the same component
-                for so many items... <span><a href="https://itskaush.hashnode.dev/doing-things-without-react"> Read More..</a></span>
-            </p>
-        </div>
-
-        <div class="card">
-            <h2> Constructors in CPP  </h2>
-            <p class="desc">
-                Object-Oriented Programming is a paradigm 
-                of programming which is based on the concepts
-                 of "Objects". It is a style of p...<span><a href="https://itskaush.hashnode.dev/constructors-in-c"> Read More.. </a></a></span>
-            </p>
-        </div>
+        
     </div>
-    
+
+    <script src="blog.js"></script>
 </body>
 </html>
