bug: fixed link for CLI apps

--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
             <p class="desc">
               Wanna check how well you know me ? Check out my CLI quiz app here!
             </p>
+            <a target="_blank" href="https://github.com/kaushalendra-pandey/CLI-QUIZ-">
+              <h3 style="color: blue; text-align: center;"> Github Repo</h3>
+            </a>
             <!-- <h3 style="color: blue; text-align: center;"> Github Repo</h3> -->
             <div class="take-me-button">
               <button class="project-link">
-                  <a href="https://github.com/kaushalendra-pandey/CLI-QUIZ-" target="_blank"> You can see the app here ➡ </a>
+                  <a href="https://replit.com/@kaushalendrapan/CLI-QUIZ" target="_blank"> You can see the app here ➡ </a>
               </button>
             </div>
             
@@ -60,11 +63,15 @@
           <p class="desc">
             Wanna who I admire and how well you know him? Check out my CLI quiz app here!
           </p>
+          <a target="_blank" href="https://github.com/kaushalendra-pandey/Fandom-Quiz-CLI">
+            <h3 style="color: blue; text-align: center;"> Github Repo</h3>
+          </a>
 
+          <!-- https://replit.com/@kaushalendrapan/Fandom-Quiz -->
           <!-- <h3 style="color: blue; text-align: center;"> Github Repo</h3> -->
           <div class="take-me-button">
             <button class="project-link">
-                <a target="_blank" href="https://github.com/kaushalendra-pandey/Fandom-Quiz-CLI"> You can see the app here ➡ </a>
+                <a target="_blank" href="https://replit.com/@kaushalendrapan/Fandom-Quiz"> You can see the app here ➡ </a>
             </button>
           </div>
           
